Graceful Js shift. Had to rewrite it because it stopped working for some reason.

--- a/www/ui/css/screen.css
+++ b/www/ui/css/screen.css
@@ -218,12 +218,12 @@ code {
 }
 #profilePic {
 	float:right;
-	background:#fff;
-	border:1px solid #444;
+	margin:0 0 6px 6px;
 }
 #profilePic img{
 	display:block;
-	margin: 2px 2px 10px 2px!important;
+	border:2px solid #fff!important;
+	padding:0!important;
 }
 .home {
 	background:#b0b0b0 !important;	
